# dsop

./: .gitignore  CHANGELOG.md  LICENSE  Makefile
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: ato-milestone.yml  config.yml  control-deviation.yml  poam-item.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ato-status-report.yml  codeql.yml  dependabot-auto.yml  devsecops-pipeline.yml  emass-package-release.yml  openssf-scorecard.yml
compliance/: README.md  roles-and-responsibilities.md
compliance/conmon/: continuous-monitoring-strategy.md
compliance/control-catalog/: ccis-and-assessment-procedures.md  control-catalog.yaml
compliance/crosswalks/: raise-2.0-crosswalk.md  ssdf-800-218-crosswalk.md
compliance/ssp/: system-security-plan.md
compliance/templates/: authorization-decision-document.md  customer-responsibility-matrix.md  poam-template.csv  security-assessment-plan.md
deploy/k8s/: deployment.yaml  namespace.yaml  networkpolicy.yaml
deploy/terraform/: main.tf  variables.tf  versions.tf
docs/: architecture.md  getting-started.md  pipeline-gates.md
policy/: allowed-licenses.yaml  thresholds.yaml
policy/zap/: rules.tsv
sample-app/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
sample-app/app/: __init__.py  main.py  sbom_check.py
sample-app/tests/: test_main.py
scripts/: aggregate_evidence.py  build_dashboard_data.py  build_emass_package.py  evidence_common.py  generate_poam.py  map_controls.py  requirements.txt  update_conmon.py
site/: index.html
(+30 files in other folders)
