[project]
name = "dsop-sample-app"
version = "0.1.0"
description = "Demonstration workload for the DSOP DevSecOps reference pipeline"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = ["Flask>=3.0", "gunicorn>=23.0"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S", "UP", "C4"]
# S101 (assert) is fine in tests; ruff already special-cases tests for many S-rules.
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
